<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">App de Monitoreo \n Tierra Inteligente</string>
    <string name="app_inicio">App de Monitoreo de Plagas </string>
    <string name="monitoreo">Monitoreos</string>
    <string name="estadistica">Estadísticas</string>
    <string name="registro_t">Seguimiento de Registros</string>
    <string name="cargar_kml">Cargar KML</string>
    <string name="mapas">Ver Mapas</string>
    <string name="hola">Hola </string>
    <string name="msj_bienvenidaregistro">Te estás registrando a la App de Monitoreo de Plagas</string>
    <string name="msj_llenarcampos">Por favor, llena los siguientes campos</string>
    <string name="user_name">Nombre(s): </string>
    <string name="last_name">Apellido(s): </string>
    <string name="cellphone">Celular: </string>
    <string name="email">Email: </string>
    <string name="password">Contraseña: </string>
    <string name="confirm_password">Confirmar \n Contraseña</string>
    <string name="see_password">Ver Contraseña</string>
    <string name="hide_pasword">Ocultar contraseña</string>
    <string name="llena_campos">Favor de llenar los campos</string>
    <string name="error_password">Error. Las contraseñas no coinciden</string>
    <string name="boton_registrarse">Registrarse</string>
    <string name="login">Inicia Sesión, por favor, accede a tu información de registro</string>
    <string name="kml_start">Subir Archivo KML</string>
    <string name="kml_granja">Ingresa el nombre de la Granja a la cual pertenece tu KML</string>
    <string name="kml_lote">Ingresa el nombre del lote</string>
    <string name="kml_boton">Subir KML</string>
    <string name="channel_name">Name Channel</string>
    <string name="channel_description">Descripcion</string>
    <string name="ataque_raiz">Ataque Raiz</string>
    <string name="ataque_follaje">Ataque Follaje</string>
    <string name="planaccion">Planes de Acción</string>
    <string name="menu_inicio">Menú de Inicio</string>
    <string name="menu_admin">Menú de Administrador</string>
    <string name="upload_monitoreo">Subir Monitoreos Pendientes</string>
    <string name="msj_login">Iniciar Sesión</string>
    <string name="msj_loginadmin">Inicio de Sesión Admin</string>
    <string name="logout">Cierre de Sesión</string>
    <string name="msj_signin">Regístrate</string>
    <string name="msj_vermonitoreo">Mis Monitoreos</string>
    <string name="msj_verestadisticas">Mis Estadísticas</string>
    <string name="msj_logout">Cerrar Sesión</string>
    <string name="msj_bienvenida">Bienvenido al registro \n de  control de plagas</string>
    <string name="boton_comenzar">¡Comenzar registro!</string>
    <string name="boton_cerraraplicacion">Cerrar aplicación </string>
    <string name="msj_pantalla_registro">Registra tus eventos para monitorear </string>
    <string name="msj_gerente"> Registra tus eventos de monitoreo </string>
    <string name="boton_gerente">¡Registrar!</string>
    <string name="comenzar">Comenzar</string>
    <string name="msj_monitoreador">Añade los eventos de tu registro antes de comenzar tu monitoreo</string>
    <string name="boton_monitoreador">¡Añadir!</string>
    <string name="agricultor">Agricultor:</string>
    <string name="granja">Granja:</string>
    <string name="lote">Lote:</string>
    <string name="importante">Importante</string>
    <string name="añadido">Añadido</string>
    <string name="regresar">Regresar</string>
    <string name="msj_pantallaconteo">Estás registrando el punto número: </string>
    <string name="msj_comienzoplaga">Comienza a registrar tu plaga</string>
    <string name="boton_registrarpunto">Registrar Punto</string>
    <string name="boton_regresar">Regresar</string>
    <string name="msj_elegirplaga">Elige el tipo de Plaga</string>
    <string name="dorsodiamante">Dorso de Diamante</string>
    <string name="fase_huevecillo">Huevecillo</string>
    <string name="fase_chico">Chico</string>
    <string name="fase_mediano">Mediano</string>
    <string name="fase_grande">Grande</string>
    <string name="fase_pupa">Pupa</string>
    <string name="fase_conalas">Con Alas</string>
    <string name="fase_sinalas">Sin Alas</string>
    <string name="fase_ninfa">Ninfa</string>
    <string name="fase_adulto">Adulto</string>
    <string name="fase_larva">Larva</string>
    <string name="msj_otrasplagas">Ver Otras Plagas</string>
    <string name="boton_enviarregistro">Enviar Registro</string>
    <string name="boton_registromapa">Confirmar registro mapa</string>
    <string name="boton_otroregistro">Realizar otro registro</string>
    <string name="boton_terminarregistro">Terminar registro</string>
    <string name="latitud">Latitud: </string>
    <string name="longitud">Longitud: </string>
    <string name="coordenadas">Coordenadas: </string>
    <string name="msj_registrogerente">Este menú es para poder agregar un nuevo agricultor, granja y/o lote. \n
                                        Así también como agregar registros ya existentes.</string>
    <string name="msj_newagricultor">Agricultor nuevo:</string>
    <string name="msj_newgranja">Granja nueva:</string>
    <string name="msj_newlote">Lote nuevo:</string>
    <string name="msj_agregaragricultor">Agrega un agricultor</string>
    <string name="msj_agregargranja">Agrega una granja</string>
    <string name="msj_agregarlote">Agrega un lote</string>
    <string name="msj_seleccionaagricultor">Selecciona un agricultor</string>
    <string name="msj_seleccionagranja">Selecciona una granja</string>
    <string name="msj_seleccionalote">Selecciona un lote</string>
    <string name="msj_fase">Fase: </string>
    <string name="msj_cantidad">Cantidad: </string>
    <string name="plaga_dorsodiamante">Dorso de Diamante</string>
    <string name="plaga_falsomedidor">Falso Medidor</string>
    <string name="plaga_gusanosoldado">Gusano Soldado</string>
    <string name="plaga_pulgonverde">Pulgon Verde</string>
    <string name="plaga_pulgongris">Pulgon Gris</string>
    <string name="plaga_chinchelygus">Chinche Lygus</string>
    <string name="plaga_pieris">Gusano Pieris</string>
    <string name="plaga_copitarsia">Copitarsia</string>
    <string name="plaga_diabrotica">Diabrotica</string>
    <string name="plaga_chicharrita">Chicharrita</string>
    <string name="plaga_gusanocol">Gusano de la Col</string>
    <string name="plaga_gusanofruta">Gusano de la Fruta</string>
    <string name="plaga_trips">Trips</string>
    <string name="plaga_chinchenysius">Chinche Nysius</string>
    <string name="plaga_coccinellidae">Coccinellidae (Mariquita)</string>
    <string name="plaga_mosquitablanca">Mosquita Blanca</string>
    <string name="plaga_helicoverpa">Helicoverpa Zea</string>
    <string name="plaga_gusanocogollero">Gusano Cogollero</string>
    <string name="plaga_gusanoalambre">Gusano Alambre</string>
    <string name="enfermedad_minador">Minador</string>
    <string name="enfermedad_tizon">Tizon</string>
    <string name="enfermedad_pudricioncogollo">Pudricion del Cogollo</string>
    <string name="enfermedad_marchitezagave">Marchitez del Agave</string>
    <string name="terminos_condiciones">Términos y Condiciones de Uso</string>
    <string name="prev_tyc">Antes de poder usar la App de Monitoreo de Plagas de Tierra Inteligente, deberás aceptar los términos y condiciones, y las políticas de privacidad.</string>
    <string name="acepto_tyc">He leído y acepto los Términos y Condiciones.</string>
    <string name="acepto_pp">He leído y acepto las Políticas de Privacidad.</string>
    <string name="politicas_privacidad">Políticas de Privacidad</string>
    <string name="tyc_previous">Bienvenido/a a la aplicación de monitoreo georeferenciado de plagas en cultivos desarrollada por Tierra Inteligente. Antes de utilizar esta aplicación, por favor, lee detenidamente estos términos y condiciones.</string>
    <string name="tyc_clausula1">1. Uso de la Aplicación</string>
    <string name="tyc_clausula1_1">1.1. Al utilizar esta aplicación, aceptas cumplir con estos términos y condiciones.</string>
    <string name="tyc_clausula1_2">1.2. La aplicación está destinada exclusivamente para el monitoreo de plagas en cultivos agrícolas.</string>
    <string name="tyc_clausula1_3">1.3. Queda estrictamente prohibida la distribución de la aplicación a personas ajenas a la agrícola.</string>
    <string name="tyc_clausula2">2. Propiedad Intelectual</string>
    <string name="tyc_clausula2_1">2.1. La aplicación y todo su contenido, incluyendo pero no limitado a, textos, imágenes, gráficos, logotipos, son propiedad exclusiva de Tierra Inteligente.</string>
    <string name="tyc_clausula2_2">2.2. Queda prohibida la copia, reproducción o distribución parcial o total de la aplicación sin autorización previa por escrito de Tierra Inteligente.</string>
    <string name="tyc_clausula3">3. Responsabilidades del Usuario</string>
    <string name="tyc_clausula3_1">3.1. El usuario se compromete a utilizar la aplicación únicamente con fines legales y de acuerdo con estos términos y condiciones.</string>
    <string name="tyc_clausula3_2">3.2. El usuario es responsable de mantener la confidencialidad de su información de inicio de sesión y de cualquier actividad que ocurra bajo su cuenta.</string>
    <string name="tyc_clausula4">4. Limitación de Responsabilidad</string>
    <string name="tyc_clausula4_1">4.1. Tierra Inteligente no se hace responsable de cualquier daño directo, indirecto, incidental, especial, emergente o punitivo que surja del uso de esta aplicación.</string>
    <string name="tyc_clausula4_2">4.2. La aplicación se proporciona "tal cual" y "según disponibilidad", sin garantías de ningún tipo, ya sean expresas o implícitas.</string>
    <string name="pp_previous">Tierra Inteligente se compromete a proteger la privacidad de los usuarios de su aplicación de monitoreo de plagas. Esta política de privacidad describe cómo recopilamos, utilizamos y protegemos la información proporcionada por los usuarios.</string>
    <string name="pp_clausula1">1. Información Recopilada</string>
    <string name="pp_clausula1_1">1.1. La aplicación recopila información georeferenciada sobre el monitoreo de plagas en cultivos, incluyendo ubicación GPS y datos específicos de las plagas detectadas.</string>
    <string name="pp_clausula1_2">1.2. La información recopilada se utiliza para mejorar nuestros servicios, desarrollar modelos de distribución de plagas y proporcionar resultados útiles a nuestros clientes.</string>
    <string name="pp_clausula2">2. Uso de la Información</string>
    <string name="pp_clausula2_1">2.1. La información recopilada se utiliza únicamente con fines internos de Tierra Inteligente y no se comparte con terceros, excepto cuando sea necesario para cumplir con requisitos legales.</string>
    <string name="pp_clausula2_2">2.2. Los resultados del monitoreo, tales como umbrales de plagas, mapas de distribución y recomendaciones de puntos de monitoreo, se proporcionan exclusivamente al cliente que utiliza la aplicación y se mantienen privados para su uso exclusivo.</string>
    <string name="pp_clausula3">3. Seguridad de la Información</string>
    <string name="pp_clausula3_1">3.1. Tierra Inteligente implementa medidas de seguridad adecuadas para proteger la información recopilada contra acceso no autorizado, alteración, divulgación o destrucción.</string>
    <string name="pp_clausula3_2">3.2. Sin embargo, no podemos garantizar la seguridad absoluta de la información transmitida a través de internet o almacenada en nuestros sistemas.</string>
    <string name="pp_clausula4">4. Modificaciones a la Política de Privacidad</string>
    <string name="pp_clausula4_1">4.1. Tierra Inteligente se reserva el derecho de actualizar o modificar esta política de privacidad en cualquier momento. Se recomienda revisar periódicamente esta política para estar al tanto de cualquier cambio.</string>
</resources>