<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginBottom="150dp">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp"/>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/greenti">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/terminos_condiciones"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:fontFamily="@font/mulishregular"/>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/mulishregular"
                    android:text="@string/prev_tyc" />
            </TableRow>
        </TableLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="25dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/terminos_condiciones"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/tyc_previous"
                    android:textSize="14sp"
                    android:textStyle="italic" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/tyc_clausula1"
                    android:textSize="14sp"
                    android:textStyle="italic" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:paddingTop="5dp"
                    android:text="@string/tyc_clausula1_1"
                    android:textSize="12sp"
                    android:textStyle="italic" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:paddingTop="5dp"
                    android:text="@string/tyc_clausula1_2"
                    android:textSize="12sp"
                    android:textStyle="italic" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:paddingTop="5dp"
                    android:text="@string/tyc_clausula1_3"
                    android:textSize="12sp"
                    android:textStyle="italic" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/tyc_clausula2"
                    android:textSize="14sp"
                    android:textStyle="italic" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:paddingTop="5dp"
                    android:text="@string/tyc_clausula2_1"
                    android:textSize="12sp"
                    android:textStyle="italic" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:paddingTop="5dp"
                    android:text="@string/tyc_clausula2_2"
                    android:textSize="12sp"
                    android:textStyle="italic" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/tyc_clausula3"
                    android:textSize="14sp"
                    android:textStyle="italic" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:paddingTop="5dp"
                    android:text="@string/tyc_clausula3_1"
                    android:textSize="12sp"
                    android:textStyle="italic" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:paddingTop="5dp"
                    android:text="@string/tyc_clausula3_2"
                    android:textSize="12sp"
                    android:textStyle="italic" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/tyc_clausula4"
                    android:textSize="14sp"
                    android:textStyle="italic" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:paddingTop="5dp"
                    android:text="@string/tyc_clausula4_1"
                    android:textSize="12sp"
                    android:textStyle="italic" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:paddingTop="5dp"
                    android:text="@string/tyc_clausula4_2"
                    android:textSize="12sp"
                    android:textStyle="italic" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center_horizontal"
                    android:text="@string/politicas_privacidad"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/pp_previous"
                    android:textSize="14sp"
                    android:textStyle="italic" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/pp_clausula1"
                    android:textSize="14sp"
                    android:textStyle="italic" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:paddingTop="5dp"
                    android:text="@string/pp_clausula1_1"
                    android:textSize="12sp"
                    android:textStyle="italic" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:paddingTop="5dp"
                    android:text="@string/pp_clausula1_2"
                    android:textSize="12sp"
                    android:textStyle="italic" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/pp_clausula2"
                    android:textSize="14sp"
                    android:textStyle="italic" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:paddingTop="5dp"
                    android:text="@string/pp_clausula2_1"
                    android:textSize="12sp"
                    android:textStyle="italic" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:paddingTop="5dp"
                    android:text="@string/pp_clausula2_2"
                    android:textSize="12sp"
                    android:textStyle="italic" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/pp_clausula3"
                    android:textSize="14sp"
                    android:textStyle="italic" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:paddingTop="5dp"
                    android:text="@string/pp_clausula3_1"
                    android:textSize="12sp"
                    android:textStyle="italic" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:paddingTop="5dp"
                    android:text="@string/pp_clausula3_2"
                    android:textSize="12sp"
                    android:textStyle="italic" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/pp_clausula4"
                    android:textSize="14sp"
                    android:textStyle="italic" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:paddingTop="5dp"
                    android:text="@string/pp_clausula4_1"
                    android:textSize="12sp"
                    android:textStyle="italic" />
            </LinearLayout>

        </ScrollView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:gravity="bottom|center_horizontal"
        android:orientation="vertical"
        android:persistentDrawingCache="animation"
        android:pointerIcon="arrow"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="1741dp">

        <CheckBox
            android:id="@+id/acept_tyc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/mulishregular"
            android:text="@string/acepto_tyc" />

        <CheckBox
            android:id="@+id/acept_pp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/mulishregular"
            android:text="@string/acepto_pp" />

        <Button
            android:id="@+id/b_accept"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/mulishregular"
            android:text="¡Comenzar!"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>